--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "homepage": "https://github.com/source-academy/sourcetoes5#readme",
   "dependencies": {
-    "meriyah": "^1.8.2"
+    "acorn": ">= 5.0 && < 5.1"
   }
 }
