--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "homepage": "https://github.com/source-academy/sourcetoes5#readme",
   "dependencies": {
-    "acorn": ">= 5.0 && < 5.1"
+    "acorn": ">= 5.0 && < 5.1",
+    "jison": "^0.4.18"
   }
 }
